2010-06-01 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version numbers for 3.1.
	* Add function voikkoGetVersion() to get the library version string.
	* Add option --version to test tools.

2010-05-11 Harri Pitkänen <hatapitk@iki.fi>
	* Adjust old API so that up to four simultaneous handles can be opened.
	  This method is not thread safe but it is no worse than the old single
	  handle check. It should fix many real world problems (eg. with Evolution)
	  while we wait for applications to switch to the new API.
	* (voikkospell) fix option -x
	* (voikkospell) add option -tt

2010-05-02 Harri Pitkänen <hatapitk@iki.fi>
	* Rename listSupportedLanguages -> listSupportedSpellingLanguages.
	* Improve repeating words check (Trac #2).

2010-04-30 Harri Pitkänen <hatapitk@iki.fi>
	* Allow "Suomen Keskusta" and other similar names in capitalization checks.

2010-04-24 Harri Pitkänen <hatapitk@iki.fi>
	* Reimplement capitalization checks in grammar checker with state machine.
	* Handle parenthesis and quotes better in grammar checker.
	* Add option for printing input line number in voikkogc.

2010-04-23 Harri Pitkänen <hatapitk@iki.fi>
	* Move cache size setting from voikkoInit to integer option
	  VOIKKO_SPELLER_CACHE_SIZE.

2010-04-18 Harri Pitkänen <hatapitk@iki.fi>
	* Modify voikkoInit to take a BCP 47 language tag instead of variant name.
	* Add function voikko_dict_language to query the language of a dictionary.

2010-04-17 Harri Pitkänen <hatapitk@iki.fi>
	* Run basic tests on "make check".
	* Add function voikkoListSupportedLanguages for listing languages that
	  are supported in spell checking.

2010-04-06 Flammie Pirinen <flammie@iki.fi>
	* Updated HFST integration including suggestion generator
	  and hyphenator.

2010-04-04 Harri Pitkänen <hatapitk@iki.fi>
	* Add multi thread mode to voikkospell.

2010-03-29 Harri Pitkänen <hatapitk@iki.fi>
	* Do not include config.h unless HAVE_CONFIG_H is defined.

2010-03-28 Andris Pavenis <andris.pavenis@iki.fi>